<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/profile_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_fake_actionbar_height"
        android:gravity="center_vertical">

        <Button
            android:layout_width="@dimen/default_actionbar_button_width"
            android:layout_height="@dimen/default_actionbar_button_height"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/back" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/app_special_offer"
        android:textColor="#993300"
        android:textSize="38sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_special_offer_slogan"
        android:textColor="#993300"
        android:textSize="17sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:stretchColumns="1">

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:text="@string/profile_login_username"
                android:textColor="#993300"
                android:textSize="15sp" />

            <EditText
                android:layout_marginLeft="10dp"
                android:hint="@string/profile_login_username_hint" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/profile_regist_password"
                android:textColor="#993300"
                android:textSize="15sp" />

            <EditText
                android:layout_marginLeft="10dp"
                android:hint="@string/profile_login_password_hint" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/profile_login_login"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@color/white"
            android:text="@string/profile_login"
            android:textColor="#993300"
            android:textSize="18dp" />

        <Button
            android:id="@+id/profile_login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/profile_login_login"
            android:layout_marginRight="60dp"
            android:layout_marginTop="10dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/profile_forget_password"
            android:textColor="#993300"
            android:textSize="15sp" />

        <Button
            android:id="@+id/profile_login_regist"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/profile_login_forget_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/profile_regist_phone_regist"
            android:textColor="#993300"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/profile_login_thirdparty"
        android:textColor="#717171" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/qq" />

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="38dp"
            android:background="@mipmap/weixin" />
    </LinearLayout>
</LinearLayout>