<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_navbar_height"
                android:layout_marginTop="@dimen/default_gap">

                <android.support.v4.view.ViewPager
                    android:id="@+id/nav_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/default_minimum_gap"
                    />
                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/nav_indicator"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/default_gap"
                    android:layout_marginRight="@dimen/default_gap"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_topbar_height"
                android:orientation="horizontal" >

                    <LinearLayout style="@style/home_topbar_column_container">

                        <ImageView
                            style="@style/home_topbar_column_imageview"
                            android:src="@mipmap/friends" />

                        <TextView
                            style="@style/home_topbar_column_textview"
                            android:text="@string/home_main_friend" />
                    </LinearLayout>

                    <LinearLayout style="@style/home_topbar_column_container">

                        <ImageView
                            style="@style/home_topbar_column_imageview"
                            android:src="@mipmap/qrcode" />

                        <TextView
                            style="@style/home_topbar_column_textview"
                            android:text="@string/home_main_camera" />
                    </LinearLayout>

                    <LinearLayout style="@style/home_topbar_column_container">

                        <ImageView
                            style="@style/home_topbar_column_imageview"
                            android:src="@mipmap/share" />

                        <TextView
                            style="@style/home_topbar_column_textview"
                            android:text="@string/home_main_share" />
                    </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300px"
                android:scaleType="centerCrop"
                android:src="@mipmap/sample_1"
                android:layout_margin="@dimen/default_gap"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="550px"
                android:scaleType="centerCrop"
                android:src="@mipmap/sample_2"
                android:layout_margin="@dimen/default_gap"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>